k8s/6-ingress/1-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: 6-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: 645662440846.dkr.ecr.us-east-1.amazonaws.com/kubernetes-flask-api:latest
          ports:
            - name: http
              containerPort: 5000
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
