k8s/6-ingress/2-service.yml
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.7/guide/service/annotations/
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: 6-ingress
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
  selector:
    app: myapp
